# huhy_site

./: .gitignore  Dockerfile  SCRIPTS.md  docker-compose.yml  pyproject.toml  ТЗ.txt
alphahuhysite/: settings.py
base/: admin.py  forms.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_form_user.py
base/templates/: contact.html  home.html
static/css/: styles.css
static/js/: calendar.js
staticfiles/js/: carousel.js  header.js
telegram_bot/: app.py  loader.py
telegram_bot/data/: config.py  greetings.py
telegram_bot/handlers/: __init__.py
telegram_bot/handlers/commands/: commands.py
telegram_bot/handlers/groups/: __init__.py  new_chat_member.py
telegram_bot/keyboards/: callback_datas.py  human_button.py
telegram_bot/middlewares/: __init__.py
telegram_bot/utils/: __init__.py  notify_admins.py  set_bot_commands.py
